--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
   --middle-font-size: 1.125rem;
   --normal-font-size: 1rem;
   --small-font-size: 0.75rem;
-  --bg-color: #d4a4a4;
-  --second-bg-color: #808080;
-  --text-color:#0a0a38;
+  --bg-color: #2db4a2;
+  --second-bg-color: #a8d3c8;
+  --text-color:#0a0d38;
   --second-text-color: #080000;
   --main-color:#131613;
   --height-nav: 3em;
@@ -34,7 +34,7 @@ body{
   font-size: var(--normal-font-size);
   color: var(--text-color);
   background-color: var(--bg-color);
-  background: gray;
+  background: #a8d3c8;
 }
 
 li{
